--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -22,6 +22,11 @@
         <div v-else>
           <!-- Page 2 -->
           <div v-if="openInvitation">
+            <div class="navbar">
+              <div class="mb-5 mr-2" justify="end">
+                <v-btn fab elevation="" @click="playMe"><v-icon v-if="isPlay">mdi-play</v-icon> <v-icon v-else>mdi-pause</v-icon></v-btn>
+              </div>
+            </div>
             <div id="two">
               <v-container fluid class="bg-page2 pl-16">
                 <v-row align="center" justify="center" v-if="displayDesktop">
