--- a/tema_undangan/tema_6/index.html
+++ b/tema_undangan/tema_6/index.html
@@ -22,6 +22,9 @@
                 <div v-else>
                     <div v-if="openInvitation">
                         <div class="navbar">
+                            <div class="d-flex justify-end mb-5 mr-2">
+                                <v-btn fab elevation="" @click="playMe"><v-icon v-if="isPlay">mdi-play</v-icon> <v-icon v-else>mdi-pause</v-icon></v-btn>
+                              </div>
                             <div class="mb-5" justify="center" align="center">
                                 <v-dialog v-model="dialog" transition="dialog-bottom-transition" width="500">
                                     <template v-slot:activator="{ on, attrs }">
